Fixed overflow bug

--- a/app/mainWindow/app.global.css
+++ b/app/mainWindow/app.global.css
@@ -731,7 +731,7 @@ button.is-dark {
   width: 100%;
   height: 100%;
   right: 0;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .mid-div {
@@ -1770,6 +1770,6 @@ label {
 
   .navbar-menu {
     background: #e1e2e3 !important;
-  
+
   }
 }
